# audiobook-downloader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
.github/workflows/: release.yml
audible_api/: Cargo.toml
audible_api/src/: auth.rs  client.rs  crypto.rs  error.rs  lib.rs
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  error.rs  main.rs  update.rs
cli/src/api/: mod.rs
cli/src/commands/: auth.rs  completions.rs  config.rs  download.rs  import.rs  info.rs  list.rs  mod.rs  search.rs  sync.rs  utils.rs
cli/src/download/: mod.rs
cli/src/media/: mod.rs
cli/src/state/: mod.rs
cli/tests/: integration_tests.rs
docs/superpowers/plans/: 2026-03-22-developer-foundation-milestone-1.md  2026-03-22-interactive-experience-milestone-2.md  2026-03-22-list-command-enhancements.md  2026-03-22-ux-metadata-automation-milestone-3.md
docs/superpowers/specs/: 2026-03-22-developer-foundation-milestone-1-design.md  2026-03-22-interactive-experience-milestone-2-design.md  2026-03-22-list-command-enhancements-design.md  2026-03-22-ux-metadata-automation-milestone-3-design.md
