[workspace]
members = [
    "cli",
    "audible_api"
]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
rsa = "0.9.6"
sha2 = { version = "0.10.8", features = ["oid"] }
base64 = "0.22.1"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
rand = "0.8.5"
hex = "0.4.3"
