[package]
name = "audible_api"
version = "0.3.0"

edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand.workspace = true
hex.workspace = true
thiserror = "2.0.11"
tracing = "0.1.41"
