[package]
name = "audiobook-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
audible_api = { path = "../audible_api" }
