[package]
name = "audiobook-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
audible_api = { path = "../audible_api" }
futures-util = { workspace = true }
dirs.workspace = true
colored = "2.1.0"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
inquire = "0.7.5"
regex = "1.11.1"
walkdir = "2.5.0"
semver = "1.0.25"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
